--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,110 +1,36 @@
-[
-    {
-        "key": "datr",
-        "value": "00qOaAtBX7jERvv0qu2a9s_v",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "sb",
-        "value": "00qOaGHvCKCIWAJlO6M20axl",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61555320066249",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "xs",
-        "value": "10%3Af5rimpurOKZH4Q%3A2%3A1754155886%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "pas",
-        "value": "61555320066249%3A4IG6v0UICU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "fr",
-        "value": "0Qb4OAIUVlBixZ11Q.AWeDctuLyKsIFRnOLkWDTtbMeAwcqyMnSjRJ84pBq-KhPFeM6S4.BojkrT..AAA.0.0.BomiOk.AWesP0JzHrvUB0Uzs68PKfPUdHA",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.840Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.840Z",
-        "lastAccessed": "2025-08-16T17:17:47.841Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101722366%3BT%3A29248869",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.841Z",
-        "lastAccessed": "2025-08-16T17:17:47.841Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B722x384x3.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.841Z",
-        "lastAccessed": "2025-08-16T17:17:47.841Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2890%3Btimestamp%3A1754932132",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-16T17:17:47.841Z",
-        "lastAccessed": "2025-08-16T17:17:47.841Z"
-    }
-]
+name: Node.js CI
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    # Step to check out the repository code
+    - uses: actions/checkout@v2
+
+    # Step to set up the specified Node.js version
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    # Step to install dependencies
+    - name: Install dependencies
+      run: npm install
+
+    # Step to run the bot with the correct port
+    - name: Start the bot
+      env:
+        PORT: 8080
+      run: npm start
